createImageBitmap cannot premultiply alpha with ImageData https://bugs.webkit.org/show_bug.cgi?id=237082 <rdar://problem/89382358>

Reviewed by NOBODY (OOPS!).

The constructed ImageBuffer loses context about the source image data's
premultiplication state. This patch follows the model of using Canvas
or BitmapImage to populate the buffer by passing along serialization
state for premultiplication.

Test: fast/canvas/webgl/image-bitmap-with-premultiply.html

* Source/WebCore/html/ImageBitmap.cpp:
(WebCore::ImageBitmap::createPromise):